Center content on the homepage

--- a/views/base.pug
+++ b/views/base.pug
@@ -29,6 +29,6 @@ html(lang="en")
 
       block content
 
-      footer.footer
+      footer.footer.text-center
         p &copy; #{h.siteName} 2017
     
