--- a/views/home.pug
+++ b/views/home.pug
@@ -6,7 +6,7 @@ block content
     p.lead SEO (Search Engine Optimization) is an akward topic for most web developers. Unlike web development, SEO is not an exact science and impact of specific SEO actions can become visible after days, weeks, or even months. Or never...
     p.lead SEO for Web Devs focuses on SEO topics relevant to web developers and provides current, regularly updated SEO best practices.
 
-  div.row.marketing
+  div.row.marketing.text-center
     div.col-12
       h4
         a(href="/checklist") Web Developer's SEO Checklist
