--- a/public/css/style.css
+++ b/public/css/style.css
@@ -100,6 +100,14 @@ a#brand:hover {
   margin-top: 1.5rem;
 }
 
+@media (max-width: 36em) {
+  #mc_embed_signup input#mce-EMAIL {
+    max-width: 100%;
+    margin-top: -1rem;
+    margin-bottom: 1rem;
+  }
+}
+
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 48em) {
   /* Remove the padding we set earlier */
