--- a/views/home.pug
+++ b/views/home.pug
@@ -3,7 +3,7 @@ extends base
 block content
   div.jumbotron
     h1.display-3 #{h.siteName}
-    p.lead SEO (Search Engine Optimization) is an akward topic for most web developers. Unlike web development, SEO is not an exact science and impact of specific SEO actions can become visible after days, weeks, or even months. Or never...
+    p.lead SEO (Search Engine Optimization) is an awkward topic for most web developers. Unlike web development, SEO is not an exact science and impact of specific SEO actions can become visible after days, weeks, months, or sometimes - never.
     p.lead SEO for Web Devs focuses on SEO topics relevant to web developers and provides current, regularly updated SEO best practices.
 
   div.row.marketing.text-center
