Update homepage content

--- a/views/home.pug
+++ b/views/home.pug
@@ -10,11 +10,11 @@ block content
     div.col-12
       h4
         a(href="/checklist") Web Developer's SEO Checklist
-      p Checklist for SEO optimizations each website should implement
+      p Checklist of SEO optimizations you should implement on your website
 
       div#mc_embed_signup.text-center
         h2 Subscribe to our mailing list
-        p Join our mailing list to receive updates when new articles are published. We promise we won't spam you! ;-)
+        p Join our mailing list to receive updates when new articles are published. We promise we won't spam you!
         form#mc-embedded-subscribe-form.validate.form-inline(action=`https://seoforwebdevs.us17.list-manage.com/subscribe/post?u=aaa6aec4a8ca2f8744f266a06&amp;id=${h.mailchimpListID}` method="post" name="mc-embedded-subscribe-form" target="_blank" novalidate)
           div.mc-field-group.form-group.col-12.justify-content-center
             label(for="mce-EMAIL")
