Add link rel canonical

--- a/views/home.pug
+++ b/views/home.pug
@@ -1,5 +1,8 @@
 extends base
 
+block extra-head
+  link(rel="canonical" href="https://www.seoforwebdevs.com/checklist")
+
 block content
   div.jumbotron
     h1.display-3 #{h.siteName}
