--- a/views/base.pug
+++ b/views/base.pug
@@ -16,6 +16,8 @@ html(lang="en")
       gtag('js', new Date())
       gtag('config', '#{h.gaTrackingID}')
 
+    block extra-head
+
   body
     div#ga-tracking-id(data-ga-tracking-id=`${h.gaTrackingID}`)
     div.container
